--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "matplotlib>=3.10.8",
+    "matplotlib",
     "numpy>=1.26.0",
-    "opencv-python>=4.11.0.86",
-    "pyqt6>=6.10.1",
-    "pyyaml>=6.0.3",
+    "opencv-python>=4.11",
+    "pyyaml",
 ]
