--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "matplotlib",
     "numpy>=1.26.0",
-    "opencv-python>=4.11",
+    "opencv-python",
     "pyyaml",
 ]
